force-app/main/default/objects/Apttus_Approval__ApprovalRuleEntry__c/Apttus_Approval__ApprovalRuleEntry__c.object-meta.xml
<CustomObject>
    <description>Represents a single entry in an approval rule</description>
    <label>Approval Rule Entry</label>
    <nameField>
        <displayFormat>RE-{0000000000}</displayFormat>
        <label>Rule Entry Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Rule Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>