force-app/main/default/objects/Apttus_Approval__ApprovalRuleEntry__c/fields/Apttus_Approval__AutoReapprovalCriteria__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__AutoReapprovalCriteria__c</fullName>
    <description>The auto re-approval criteria for the step or entry</description>
    <inlineHelpText>The auto re-approval criteria for the step or entry</inlineHelpText>
    <label>Auto Reapproval Criteria</label>
    <length>8000</length>
    <type>LongTextArea</type>
</CustomField>