force-app/main/default/objects/Apttus_Approval__ApprovalRuleEntry__c/fields/Apttus_Approval__AutoReapprove__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__AutoReapprove__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether auto re-approval is enabled for the step or entry. This indicator is maintained by the system.</description>
    <inlineHelpText>Indicates whether auto re-approval is enabled for the step or entry. This indicator is maintained by the system.</inlineHelpText>
    <label>Auto Reapprove</label>
    <type>Checkbox</type>
</CustomField>