force-app/main/default/objects/Apttus_Approval__ApprovalRuleEntry__c/fields/Apttus_Approval__Condition__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Condition__c</fullName>
    <description>The condition specification</description>
    <label>Condition</label>
    <length>8000</length>
    <type>LongTextArea</type>
</CustomField>