force-app/main/default/objects/Apttus_Approval__ApprovalRuleEntry__c/fields/Apttus_Approval__CriteriaFieldNames__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__CriteriaFieldNames__c</fullName>
    <description>The list of field names used in the criteria</description>
    <inlineHelpText>The list of field names used in the criteria</inlineHelpText>
    <label>Criteria Field Names</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>