force-app/main/default/objects/Apttus_Approval__ApprovalRuleEntry__c/fields/Apttus_Approval__IncludePrevious__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__IncludePrevious__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the previous range should be included. Only applicable to Dimension rules.</description>
    <label>Include Previous</label>
    <type>Checkbox</type>
</CustomField>