force-app/main/default/objects/Apttus_Approval__ApprovalRuleEntry__c/fields/Apttus_Approval__SelectValue__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__SelectValue__c</fullName>
    <description>The select value</description>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>