force-app/main/default/objects/Apttus_Approval__ApprovalRuleEntry__c/fields/Apttus_Approval__SelectValueType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__SelectValueType__c</fullName>
    <description>The select value type</description>
    <label>Value Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Role</fullName>
            </value>
            <value>
                <fullName>Queue</fullName>
            </value>
            <value>
                <fullName>Approval Matrix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>